--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                         <input type="password" class="form-control">
                                     </div>
                                 </p>
-                                <a href="admin.html" class="btn login btn-primary btn-lg btn-block">Login</a>
+                                <a href="admin.html" class="btn login btn-primary btn-lg btn-block">View Dashboard</a>
                             </div>
                         </div>
 
@@ -81,7 +81,7 @@
                                     <input type="date" class="form-control">
                                 </div>
                             </p>
-                            <a href="student.html" class="btn btn-warning btn-lg login btn-block">Login</a>
+                            <a href="student.html" class="btn btn-warning btn-lg login btn-block">View Result</a>
                         </div>
                     </div>
                 </form>
